--- a/index.html
+++ b/index.html
@@ -38,239 +38,279 @@
 
   <body>
     <header class="header">
-      <nav class="header-nav">
-        <a
-          class="logo"
-          href="./index.html"
-          >Web<span class="header-logo-accent">Studio</span></a
-        >
-        <ul class="header-menu-list">
-          <li class="header-menu-item">
-            <a
-              class="header-menu-link"
-              href="./index.html"
-              >Studio</a
-            >
-          </li>
-          <li class="header-menu-item">
-            <a
-              class="header-menu-link"
-              href=""
-              >Portfolio</a
-            >
-          </li>
-          <li class="header-menu-item">
-            <a
-              class="header-menu-link"
-              href=""
-              >Contacts</a
-            >
-          </li>
-        </ul>
-      </nav>
+      <div class="container header-container">
+        <nav class="header-nav">
+          <a
+            class="logo header-logo"
+            href="./index.html"
+            >Web<span class="header-logo-accent">Studio</span></a
+          >
+          <ul class="header-menu-list">
+            <li class="header-menu-item">
+              <a
+                class="header-menu-link"
+                href="./index.html"
+                >Studio</a
+              >
+            </li>
+            <li class="header-menu-item">
+              <a
+                class="header-menu-link"
+                href=""
+                >Portfolio</a
+              >
+            </li>
+            <li class="header-menu-item">
+              <a
+                class="header-menu-link"
+                href=""
+                >Contacts</a
+              >
+            </li>
+          </ul>
+        </nav>
 
-      <address class="contacts">
-        <ul class="contacts-list">
-          <li class="contacts-item">
-            <a
-              class="contacts-link"
-              href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contacts-item">
-            <a
-              class="contacts-link"
-              href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+        <address class="contacts">
+          <ul class="contacts-list">
+            <li class="contacts-item">
+              <a
+                class="contacts-link"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-item">
+              <a
+                class="contacts-link"
+                href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button
-          class="hero-btn"
-          type="button"
-        >
-          Order Service
-        </button>
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button
+            class="hero-btn"
+            type="button"
+          >
+            Order Service
+          </button>
+        </div>
       </section>
 
       <section class="qualities">
-        <h2 class="qualities-title section-title">Qualities</h2>
-        <ul class="qualities-list">
-          <li class="qualities-item">
-            <h3 class="qualities-subtitle section-subtitle">Strategy</h3>
-            <p class="qualities-text section-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="qualities-item">
-            <h3 class="qualities-subtitle section-subtitle">Punctuality</h3>
-            <p class="qualities-text section-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="qualities-item">
-            <h3 class="qualities-subtitle section-subtitle">Diligence</h3>
-            <p class="qualities-text section-text">
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="qualities-item">
-            <h3 class="qualities-subtitle section-subtitle">Technologies</h3>
-            <p class="qualities-text section-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="visually-hidden">Qualities</h2>
+          <ul class="qualities-list">
+            <li class="qualities-item">
+              <h3 class="qualities-subtitle section-subtitle">Strategy</h3>
+              <p class="qualities-text section-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="qualities-item">
+              <h3 class="qualities-subtitle section-subtitle">Punctuality</h3>
+              <p class="qualities-text section-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="qualities-item">
+              <h3 class="qualities-subtitle section-subtitle">Diligence</h3>
+              <p class="qualities-text section-text">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="qualities-item">
+              <h3 class="qualities-subtitle section-subtitle">Technologies</h3>
+              <p class="qualities-text section-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="team">
-        <h2 class="team-title section-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-item">
-            <img
-              class="team-image"
-              src="./images/img-1.jpg"
-              alt="Product Designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-subtitle section-subtitle">Mark Guerrero</h3>
-            <p class="team-text section-text">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-image"
-              src="./images/img-2.jpg"
-              alt="Frontend Developer"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-subtitle section-subtitle">Tom Ford</h3>
-            <p class="team-text section-text">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-image"
-              src="./images/img-3.jpg"
-              alt="Marketing"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-subtitle section-subtitle">Camila Garcia</h3>
-            <p class="team-text section-text">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-image"
-              src="./images/img-4.jpg"
-              alt="UI Designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-subtitle section-subtitle">Daniel Wilson</h3>
-            <p class="team-text section-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-title section-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img
+                class="team-image"
+                src="./images/img-1.jpg"
+                alt="Product Designer"
+                width="264"
+                height="260"
+              />
+              <div class="team-position">
+                <h3 class="team-subtitle section-subtitle">Mark Guerrero</h3>
+                <p class="team-text section-text">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-image"
+                src="./images/img-2.jpg"
+                alt="Frontend Developer"
+                width="264"
+                height="260"
+              />
+              <div class="team-position">
+                <h3 class="team-subtitle section-subtitle">Tom Ford</h3>
+                <p class="team-text section-text">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-image"
+                src="./images/img-3.jpg"
+                alt="Marketing"
+                width="264"
+                height="260"
+              />
+              <div class="team-position">
+                <h3 class="team-subtitle section-subtitle">Camila Garcia</h3>
+                <p class="team-text section-text">Marketing</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-image"
+                src="./images/img-4.jpg"
+                alt="UI Designer"
+                width="264"
+                height="260"
+              />
+              <div class="team-position">
+                <h3 class="team-subtitle section-subtitle">Daniel Wilson</h3>
+                <p class="team-text section-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="portfolio">
-        <h2 class="portfolio-title section-title">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-item">
-            <img
-              class="portfolio-image"
-              src="./images/portfolio-1.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-subtitle section-subtitle">Banking App</h3>
-            <p class="portfolio-text section-text">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-image"
-              src="./images/portfolio-2.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-subtitle section-subtitle">
-              Cashless Payment
-            </h3>
-            <p class="portfolio-text section-text">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-image"
-              src="./images/portfolio-3.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-subtitle section-subtitle">Meditation App</h3>
-            <p class="portfolio-text section-text">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-image"
-              src="./images/portfolio-4.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-subtitle section-subtitle">Taxi Service</h3>
-            <p class="portfolio-text section-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              class="portfolio-image"
-              src="./images/portfolio-5.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-subtitle section-subtitle">
-              Screen Illustrations
-            </h3>
-            <p class="portfolio-text section-text">Design</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-image"
-              src="./images/portfolio-6.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-subtitle section-subtitle">Online Courses</h3>
-            <p class="portfolio-text section-text">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="portfolio-title section-title">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
+              <img
+                class="portfolio-image"
+                src="./images/portfolio-1.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-position">
+                <h3 class="portfolio-subtitle section-subtitle">Banking App</h3>
+                <p class="portfolio-text section-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-image"
+                src="./images/portfolio-2.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-position">
+                <h3 class="portfolio-subtitle section-subtitle">
+                  Cashless Payment
+                </h3>
+                <p class="portfolio-text section-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-image"
+                src="./images/portfolio-3.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-position">
+                <h3 class="portfolio-subtitle section-subtitle">
+                  Meditation App
+                </h3>
+                <p class="portfolio-text section-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-image"
+                src="./images/portfolio-4.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-position">
+                <h3 class="portfolio-subtitle section-subtitle">
+                  Taxi Service
+                </h3>
+                <p class="portfolio-text section-text">Marketing</p>
+              </div>
+            </li>
+            <li>
+              <img
+                class="portfolio-image"
+                src="./images/portfolio-5.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-position">
+                <h3 class="portfolio-subtitle section-subtitle">
+                  Screen Illustrations
+                </h3>
+                <p class="portfolio-text section-text">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-image"
+                src="./images/portfolio-6.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-position">
+                <h3 class="portfolio-subtitle section-subtitle">
+                  Online Courses
+                </h3>
+                <p class="portfolio-text section-text">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="footer">
-      <a
-        class="logo"
-        href="./index.html"
-        >Web<span class="footer-logo-accent">Studio</span></a
-      >
-      <p class="footer-text section-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <div class="fotter-info">
+          <a
+            class="logo"
+            href="./index.html"
+            >Web<span class="footer-logo-accent">Studio</span></a
+          >
+          <p class="footer-text section-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
