--- a/index.html
+++ b/index.html
@@ -299,17 +299,15 @@
 
     <footer class="footer">
       <div class="container">
-        <div class="fotter-info">
-          <a
-            class="logo"
-            href="./index.html"
-            >Web<span class="footer-logo-accent">Studio</span></a
-          >
-          <p class="footer-text section-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
+        <a
+          class="logo fotter-logo"
+          href="./index.html"
+          >Web<span class="footer-logo-accent">Studio</span></a
+        >
+        <p class="footer-text section-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </div>
     </footer>
   </body>
