--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                 <p class="portfolio-text section-text">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 class="portfolio-image"
                 src="./images/portfolio-5.jpg"
